force-app/main/default/objects/Equipment_Set__c/Equipment_Set__c.object-meta.xml
<CustomObject>
    <label>Equipment Set</label>
    <nameField>
        <displayFormat>EqSet-{0000}</displayFormat>
        <label>Equipment to Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>